# data-pods-benchmark

./: Cargo.toml  README.md  data-pods.sh  justfile  profile.py
applications/: cryptobirds.app  messenger.app  recommender.app
ci/: setup-tvm.sh  test-runner.sh
client-bindings/: Cargo.toml
client-bindings/src/: blockchain.rs  data_pod.rs  lib.rs  requests.rs
data-pod/: Cargo.toml  build.rs  enclave_key.pem
data-pod-proxy/: Cargo.toml
data-pod-proxy/src/: datapod.rs  main.rs  remote_parties.rs
data-pod/src/: blockchain.rs  build_model_lib.py  enclave.rs  main.rs  proxy.rs  requests.rs
data-pod/src/applications/: application.rs  bindings.rs  global_reservations.rs  mod.rs  tvm_bindings.rs
data-pod/src/remote_parties/: mod.rs  remote_party.rs
data-pod/src/transactions/: chunks.rs  federated.rs  mod.rs  remote.rs
datastore/: Cargo.toml
datastore/src/: application_parser.rs  digest.rs  error.rs  lib.rs  merkle.rs  meta_fn_parser.rs  objects.rs  patricia.rs  protocol.rs  reservation_set.rs  reservations.rs  shards.rs  transactions.rs  types.rs  values.rs
ledger/: Cargo.toml
ledger/src/: main.rs
scripts/: nn_test.py  testnet.py
secure-channel/: Cargo.toml
secure-channel/src/: client.rs  encryption.rs  lib.rs  server.rs
utils/: Cargo.toml
utils/src/: enclave_protocol.rs  lib.rs
