[package]
name = "data-pod"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.wisc.edu>"]
edition = "2021"
description = "The data pods logic running inside SGX"

[dependencies]
log = { version="0.4" }
tokio-util = { version="0.6", features=["codec"] }
tokio = { version="1", features=["rt-multi-thread", "time", "sync"] }
bincode = { version="1.2" }
bytes = { version="1" }
serde_bytes = { version="0.11" }
rand = "0.8"
cfg-if = "1"
futures = { version="0.3" }
serde = { version = "^1", features = ["derive"] }
blockchain-simulator = { git="https://github.com/kaimast/blockchain-simulator.git", branch="main" }
data-pods-utils = { path = "../utils" }
data-pods-store = { path = "../datastore" }
secure-channel = { path = "../secure-channel", optional=true }
async-trait = { version="0.1" }
ctrlc = { version="^3", features=["termination"], optional=true }
cpuprofiler = { version="0.0", optional=true }
num_cpus = { version="^1" }
cowlang = { features=["interpreter"], default-features=false, git="https://github.com/kaimast/cowlang.git", branch="main" }
cowlang-derive = { git="https://github.com/kaimast/cowlang-derive.git", branch="main" }
tvm = { git="https://github.com/apache/incubator-tvm.git", optional=true, features=["use-micro-standalone-runtime"] }
ndarray={ version="0.12", optional=true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
pretty_env_logger = "0.4"

[features]
default = ["use-tls"]
enable-tvm = ["tvm", "ndarray"]
use-tls = ["secure-channel"]
enable-ctrlc = ["ctrlc"]
enable-profiling = ["cpuprofiler"]
