[package]
name = "data-pods-store"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.cornell.edu>"]
edition = "2021"

[dependencies]
bincode = { version="1.2" }
async-trait = { version="0.1" }
chrono = { version="0.4" }
sha2 = { version="0.9" }
arr_macro = { version="0.1" }
generic-array = { version="0.14", features=["serde"] }
serde = { version="1.0", features=["derive", "rc"] }
static_assertions = { version="1.1" }
bit-vec = { version="0.6", features=["serde"] }
serde_bytes = { version="0.11" }
byte-slice-cast = { version="0.3" }
byteorder = { version="1.3" }
rand = "0.8"
cowlang = { features=["hash", "compiler"], default-features=false, git="https://github.com/kaimast/cowlang.git", branch="main" }
data-pods-utils = { path="../utils" }
log = { version="0.4" }
#plex = { version="0.2" }
plex = { git="https://github.com/kaimast/plex.git" }
blockchain-simulator = { git="https://github.com/kaimast/blockchain-simulator.git", branch="main" }

[features]
default = []
verbose-compile = []
