[package]
name = "secure-channel"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.cornell.edu>"]
edition = "2021"

[dependencies]
hex-literal = { version="0.2" }
block-modes = { version="0.8.1" }
either = { version="1.5" }
aes = { version="0.7" }
bytes = { version="1" }
log = "0.4"
bincode = "1"
tokio-util = { version="0.6", features=["codec"], optional=true }
tokio = { version="1", optional=true }

[features]
default = []
use-tokio = ["tokio", "tokio-util"]
